P2/Arrays/01/var/archive/xmlreports/0/0/1/000054
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="54" judge-id="11" status="CE" scoring="ACM" run-tests="0" contest-id="201" compile-error="yes" >
  <uuid>ec513290-b53e-4aa8-8e7c-abf83e0ef795</uuid>
  <compiler_output>000054.cpp:9:2: error: expected unqualified-id before 'return'
  return 0;}
  ^~~~~~
000054.cpp:9:11: error: expected declaration before '}' token
  return 0;}
           ^
</compiler_output>
</testing-report>
